# Graph2Seq4TKGQG

./: .gitignore  DATASETS.md  README.md  pyproject.toml
scripts/: convert_multitq_to_graph2seq.py
src/: main.py
src/config/mhqg-pq/: graph2seq.yml  graph2seq_edge_emb.yml  rl_graph2seq.yml  rl_graph2seq_edge_emb.yml
src/config/mhqg-wq/: graph2seq.yml  graph2seq_edge_emb.yml  graph2seq_kb.yml  rl_graph2seq.yml  rl_graph2seq_edge_emb.yml
src/core/: model.py  model_handler.py
src/core/layers/: common.py  graphs.py
src/core/models/: graph2seq.py  seq2seq.py
src/core/utils/: generic_utils.py
