[project]
name = "graph2seq-pytorch"
version = "1.0.0"
description = "Graph2Seq: Graph to Sequence Learning with Attention-based Neural Networks - PyTorch Implementation"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8,<3.12"
authors = [
    { name = "Kun Xu" },
    { name = "Lingfei Wu" },
]
keywords = ["graph neural network", "seq2seq", "attention", "pytorch", "deep learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.2.0",
    "numpy>=1.24.0",
    "networkx>=3.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
    "nltk>=3.8",
    "gensim>=4.3",
    "rapidfuzz>=3.6",
    "SPARQLWrapper>=2.0.0",
    "transformers>=4.35.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/example/graph2seq-pytorch"
Documentation = "https://github.com/example/graph2seq-pytorch#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["Graph2Seq4TKGQG/src"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
